--- a/dataAnalysis.html
+++ b/dataAnalysis.html
@@ -36,7 +36,7 @@
 						<div class="inner">
 							<h1 class="major">Historical Data Analysis</h1>
                             <p>
-                                With the Data Analysis page, you can get valueable insights on your patrol routes for any time period you wish. The application analyzes the patrol data 
+                                With the Data Analysis page, you can get valuable insights on your patrol routes for any time period you wish. The application analyzes the patrol data 
                                 for the selected time frame and provides interactive visualizations.
                             </p>
 
@@ -46,7 +46,7 @@
                             </span>
 							<p>
                                The bar chart on the top shows the number of times that each location has been logged in your specified time frame. The data is ordered by number of logs so it is very easy
-                                to see which locations are beeing neglected by your patrols.
+                                to see which locations are being neglected by your patrols.
 
                             </p>
                             <p>
